# magentic-litellm-tutorial

./: .gitignore  README.md  pyproject.toml
scripts/: 1_prompt_demo.ipynb  2_backend_choice.ipynb  3_chat_prompting.ipynb  4_structured_output.ipynb  5_function_calling.ipynb  6_async_support.ipynb  7_streaming_and_object_streaming.ipynb
