[tool.poetry]
name = "litellm-magentic"
version = "0.1.0"
description = ""
authors = ["jimzer <jimi.vaubien@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
magentic = { extras = ["litellm"], version = "^0.21.0" }
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.2"

[tool.mypy]
disable_error_code = ["empty-body"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
